# faym-server

./: .env.example  .gitignore  .vercelignore  DESIGN.md  README.md  assignment.md  main.py  project.md  pyproject.toml  requirements.txt  seed.py
api/: index.py
app/: __init__.py  auth.py  clock.py  db.py  errors.py  main.py  models.py  money.py  schemas.py  seed.py
app/api/: admin.py  auth.py  payouts.py  sales.py  users.py  withdrawals.py
app/services/: __init__.py  ledger.py  payout_service.py  withdrawal_service.py
frontend/: app.js  index.html  styles.css
tests/: conftest.py  test_advance.py  test_api.py  test_reconciliation.py  test_withdrawal.py
